Fix overlapping

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -637,8 +637,6 @@ a.unread .unread-mark .icon-unread-mark {
   width: 100%;
   height: 100%;
   -moz-transition: padding 0.3s ease-out;
-  overflow: hidden;
-  text-overflow: ellipsis;
   border-bottom: 0.1rem solid hsla(207,22%,92%,1);
 }
 
@@ -647,6 +645,9 @@ a.unread .unread-mark .icon-unread-mark {
   font-size: 2rem;
   line-height: 3rem;
   width: -moz-calc(100% - 6rem);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 #messages-container .item > a > .type {
